turbo-repo/apps/app/src/app/globals.css
@import "tailwindcss";
@import "flowbite-react/plugin/tailwindcss";
@source "../../.flowbite-react/class-list.json";

@config "../../tailwind.config.ts";

@custom-variant dark (&:where(.dark, .dark *));

@layer utilities {
  .no-dot {
    text-decoration: none;
  }

  .no-dot::before {
    content: none;
  }
}

/* Remove dots from the start of links */
a[href^="."] {
  text-decoration: none;
}

a[href^="."]::before {
  content: none;
}

/* Custom Scrollbar Styling */
:root {
  scrollbar-color: transparent transparent;
  --scrollbar-track: transparent;
  --scrollbar-thumb: rgb(168, 178, 195);
  --scrollbar-thumb-hover: rgb(31 41 55);
}

.dark {
  --scrollbar-track: transparent;
  --scrollbar-thumb: rgb(107 114 128);
  --scrollbar-thumb-hover: #444;
}

::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

::-webkit-scrollbar-track {
  background: transparent;
  border-radius: 4px;
}

::-webkit-scrollbar-thumb {
  background: var(--scrollbar-thumb);
  border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--scrollbar-thumb-hover);
}

/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--scrollbar-thumb) transparent;
}

